--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@
         <!-- "reach out" section-->
         <section>
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3446.793438044291!2d-97.74431518488021!3d30.24296648181045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b4f80ccb57eb%3A0x60df02ea01b674b4!2s1707%20Travis%20Heights%20Blvd%2C%20Austin%2C%20TX%2078704!5e0!3m2!1sen!2sus!4v1635971373317!5m2!1sen!2sus" 
+                width="400"
+                height="400"
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+            </iframe>
+            </div>
         </section>
 
         <!--footer-->
