--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./assets/css/style.css"/>
+        <link rel="stylesheet" href="./assets/css/secondary-styles.css"/>
         <meta charset="UTF-8">
         <title> Privacy Policy - Run BUDDY </title>
     </head>
