--- a/index.html
+++ b/index.html
@@ -74,45 +74,78 @@
 
         <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                What We Do
+                </h2>
+        </div>
             <p> butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffe Vice fanny pack Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
             </p>
         </section>
 
         <!--"what you do" section -->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
-
-            <div> 
-                <img src="./assets/images/step-1.svg" alt=""/>
+           <div class="flex-row">
+                <h2 class="section-title secondary-border">
+                What You Do
+                </h2>
+            </div>  
+            <div class="step"> 
                 <h3>Step 1: <span>Fill Out Form Above.</span></h3>
-                <p>You're already here, so why not?</p>
-             </div>
-
-            <div>
-                <img src="./assets/images/step-2.svg" alt=""/>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-1.svg" alt=""/>
+                    </div>
+                    <div class="step-text">
+                        <h4>Fill Out The Form Above</h4>
+                        <p>You're already here, so why not?</p>
+                     </div>
+                </div>
+            </div>    
+            <div class="step">
                 <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-2.svg" alt=""/>
+                    </div>
+                    <div class="step-text">
+                    <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                    </div>
+                </div>
             </div>
 
-            <div>
-                <img src="./assets/images/step-3.svg" alt=""/>
+            <div class="step">
                 <h3>Step 3: <span>Get Running.</span></h3>
-                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-             </div>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-3.svg" alt=""/>
+                    </div>
+                    <div class="step-text">
+                    <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+                    </div>
+                </div>
+            </div>
 
-            <div>
-                <img src="./assets/images/step-4.svg" alt=""/>
+            <div class="step">
                 <h3>Step 4: <span>See Results.</span></h3>
-                <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-4.svg" alt=""/>
+                    </div>
+                    <div class="step-text">
+                        <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
         <!--"meet the trainers" section-->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary border">
+           <div class="flex-row">
+             <h2 class="section-title primary border">
              Meet The Trainers
-            </h2>
+             </h2>
+            </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class ="trainer-bio text-left">
@@ -154,7 +187,11 @@
 
         <!-- "reach out" section-->
         <section id="reach-out" class="contact">
-            <h2 class="section-title secondary border">Reach Out</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary border">
+                Reach Out
+                </h2>
+            </div>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3446.793438044291!2d-97.74431518488021!3d30.24296648181045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b4f80ccb57eb%3A0x60df02ea01b674b4!2s1707%20Travis%20Heights%20Blvd%2C%20Austin%2C%20TX%2078704!5e0!3m2!1sen!2sus!4v1635971373317!5m2!1sen!2sus" 
                 width="400"
